--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "react-icons": "^3.0.5",
     "react-scripts": "1.1.5",
     "socket.io": "^2.1.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "concurrently 'npm run react' 'npm run server'",
